# DataPoint

./: DataPoint.cpp  DataPoint.h  DataPoint.sln  DataPoint.vcxproj  DataPoint.vcxproj.filters  Day.cpp  Day.h  Tree.cpp  Tree.h  Year.cpp  Year.h  main.cpp  month.cpp  month.h  quarter.cpp  quarter.h
AnalizaEnergetyczna/: CMakeLists.txt  main.cpp
AnalizaEnergetyczna/Headers/: CommandParser.hpp  Data.hpp  DateTime.hpp  Day.hpp  EnergyAnalyzer.hpp  EnergyData.hpp  Month.hpp  Quarter.hpp  Time.hpp  Year.hpp
AnalizaEnergetyczna/Sources/: CommandParser.cpp  Data.cpp  DateTime.cpp  Day.cpp  EnergyAnalyzer.cpp  EnergyData.cpp  Month.cpp  Quarter.cpp  Time.cpp  Year.cpp
